--- a/.github/workflows/BuildImage.yml
+++ b/.github/workflows/BuildImage.yml
@@ -3,8 +3,9 @@ name: Build Image
 on: [push, pull_request, workflow_dispatch]
 
 env:
-  ENDPOINT: "user/endpoint"
-  BRANCH: "master"
+  ENDPOINT: "linuxserver/mods"
+  BASEIMAGE: "rutorrent"
+  MODNAME: "autodl-irssi"
 
 jobs:
   build:
