--- a/root/defaults/autodl.cfg
+++ b/root/defaults/autodl.cfg
@@ -1,5 +1,5 @@
 [options]
-gui-server-port = adlport
-gui-server-password = adlpass
+gui-server-port = !adlport
+gui-server-password = !adlpass
 rt-address = /run/php/.rtorrent.sock
 update-check = auto
